yaml_dockerfile/k8s-yaml/prometheus/grafana/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`grafana.qytangk8s.com`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
